--- a/initializr-service/src/main/resources/application.yml
+++ b/initializr-service/src/main/resources/application.yml
@@ -130,7 +130,7 @@ initializr:
           - versionRange: "[1.3.0.RELEASE, 1.5.0.M1)"
             version: 7.7.7
           - versionRange: "1.5.0.M1"
-            version: 8.3.0
+            version: 8.2.0
       keycloak:
         groupId: org.keycloak.bom
         artifactId: keycloak-adapter-bom
@@ -1264,6 +1264,35 @@ initializr:
           id: remote-shell
           description: CRaSH shell integration
           versionRange: "[1.0.0.RELEASE,1.5.0.RC1)"
+    - name: Predix
+      content:
+        - name: Predix
+          id: predix
+          description: Predix ready features to help you monitor and manage your application
+          links:
+            - rel: guide
+              href: https://spring.io/guides/gs/actuator-service/
+              description: Building a RESTful Web Service with Spring Boot Actuator
+            - rel: reference
+              href: http://docs.spring.io/spring-boot/docs/{bootVersion}/reference/htmlsingle/#production-ready
+        - name: Predix App
+          id: predix-app
+          description: Predix Application
+          versionRange: "[1.3.0.RELEASE,2.0.0.M1)"
+          groupId: com.org.predix
+          artifactId: predix-app
+        - name: Stuff Integration
+          id: stuff
+          description: Stuff Integration
+          versionRange: "[1.3.0.RELEASE,2.0.0.M1)"
+          groupId: com.org.stuff
+          artifactId: stuff
+        - name: Predix eventhub subscriber
+          id: predix-eventhub-subscriber
+          description: Predix eventhub subscriber
+          versionRange: "[1.3.0.RELEASE,2.0.0.M1)"
+          groupId: com.org.predix
+          artifactId: eventhub-subscriber
   types:
     - name: Maven Project
       id: maven-project
